Add notifications api and fix list assignments.
