# api/swagger/swagger.yaml
@@ -103,6 +103,24 @@ paths:
             description: Error
             schema:
               $ref: "#/definitions/ErrorResponse"
+  /classes/{id}/notifications:
+      x-swagger-router-controller: classes
+      get:
+        description: get all notifications of a class
+        operationId: listNotifications
+        parameters:
+        - name: id
+          in: path
+          description: class id
+          required: true
+          type: string
+        responses:
+          "200":
+            description: Success
+          default:
+            description: Error
+            schema:
+              $ref: "#/definitions/ErrorResponse"
   /assignments:
       x-swagger-router-controller: assignments
       get:
